[tool.poetry]
name = "ceol"
version = "0.1.0"
description = ""
authors = ["“sd2001” <“im.swarnabha2001@gmail.com”>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.4"
spotipy = "^2.19.0"
plotly = "^5.4.0"
matplotlib = "^3.5.0"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
seaborn = "^0.11.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
